feat: finalized gateway + auth integration, started core-service